--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ lib64/
 parts/
 sdist/
 var/
+.idea/
+venv/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -60,3 +62,6 @@ target/
 
 #Ipython Notebook
 .ipynb_checkpoints
+geckodriver
+chromedriver
+selenium-server-standalone-3.141.59.jar
