--- a/nodeConfig.json
+++ b/nodeConfig.json
@@ -11,14 +11,14 @@
       "browserName": "chrome",
       "maxInstances": 5,
       "seleniumProtocol": "WebDriver"
-    },
-    {
-      "browserName": "safari",
-      "technologyPreview": false,
-      "platform": "MAC",
-      "maxInstances": 1,
-      "seleniumProtocol": "WebDriver"
     }
+    // {
+    //   "browserName": "safari",
+    //   "technologyPreview": false,
+    //   "platform": "MAC",
+    //   "maxInstances": 1,
+    //   "seleniumProtocol": "WebDriver"
+    // }
   ],
   "proxy": "org.openqa.grid.selenium.proxy.DefaultRemoteProxy",
   "maxSession": 5,
