--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ var/
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
+chromedriver.exe
+geckodriver.exe
+node.sh
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
