--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 chromedriver
 geckodriver
-selenium-server-standalone-3.141.59
+selenium-server-standalone-3.141.59.jar
 
 # C extensions
 venv/*
