--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["dmitrijgulacenkov <pingvin1959@yandex.ru>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "~3.8"
 PyAutoGUI = "^0.9.52"
 selenium = "^3.141.0"
 
